Added GUI and done Registration

--- a/webapp/views/style.css
+++ b/webapp/views/style.css
@@ -3,6 +3,7 @@ input{
     margin-bottom:10px;
 }
 .inputForm {
+    height: 20px;
     width: 150px;
 }
 /*{*/
@@ -12,6 +13,38 @@ input{
 /*    width: 150px;!important;*/
 /*    height: 50px;!important;*/
 /*}*/
-.abs{
-    position: absolute;
+
+select {
+    height: 20px;
+    width: 150px;
+    margin-top: -15px;
 }
+p {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 9px;
+}
+.button_sub,.button_reg{
+    margin-top: 10px;
+    width: 150px;
+    text-align: center;
+
+}
+.button{
+    display: block;
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
+    padding: .8em 1em calc(.8em + 3px);
+    border-radius: 3px;
+    background: rgb(64,199,129);
+    box-shadow: 0 -3px rgb(53,167,110) inset;
+    transition: 0.2s;
+    margin-bottom: 20px;
+}
+
+.button_back{
+    width: 50px;
+    padding: 7px;
+}
+
